# reflow_table_server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  file_raii_guard.hpp  main.cpp  orange_zero_profile
application/: CMakeLists.txt  application_config.cpp
application/inc/application/: application_config.hpp
commands_parser/: CMakeLists.txt  commands_parser.cpp
commands_parser/inc/commands/: commands_list.hpp  commands_parser.hpp
conan_profiles/: orange_zero_profile  standalone_toolchain_inc
conan_profiles/GNU/: profile  standalone_toolchain_inc
conan_profiles/MSVC/: profile
configs/: application_config.json  config.json  server_config.json
configs/windows/: application_config.json  server_config.json
devices_layer/: CMakeLists.txt  ih_thermocouple_data_provider.hpp  thermocouple_sysfs_impl.hpp
devices_layer/device_includes/: ih_relay_controller.hpp  ih_surrounding_sensor.hpp  ih_temperature_data_provider.hpp  ih_thermocouple_data_provider.hpp  ih_thermocouple_device.hpp
devices_layer/implementations/: random_thermocouple_data_provider.hpp  thermocouple_sysfs_impl.hpp
devices_layer/implementations/arm_target/: relay_controller_arm_target.cpp  surrounding_sensor_arm_target.cpp  thermocouple_sysfs_impl.cpp
devices_layer/implementations/stubs/: random_thermocouple_data_provider.cpp  relay_controller_stub.cpp
devices_layer/platform_devices/: platform_device_usings.cpp  platform_device_usings.hpp
executor/: CMakeLists.txt  async_executor.cpp  executor_creator.cpp  sync_executor.cpp
executor/executors/: async_executor.hpp  executor_creator.hpp  ih_executor.hpp  sync_executor.hpp
http_requests_handler/: CMakeLists.txt  request_utils.cpp  request_utils.hpp  soldering_table_responses_handler.cpp  soldering_table_responses_handler.hpp
modbus_proxy/: CMakeLists.txt  modbus_proxy.cpp
modbus_proxy/inc/modbus_proxy/: ih_modbus_proxy.hpp  modbus_address_constants.hpp  modbus_proxy.hpp
platform/: CMakeLists.txt  file_raii_guard.hpp  iio_format_parser.hpp
presets/: CMakeLists.txt  presets_holder.cpp  presets_manager.cpp
presets/inc/presets/: presets_holder.hpp
reflow_controller/: CMakeLists.txt  reflow_controller.cpp
reflow_controller/inc/reflow_controller/: reflow_controller.hpp  reflow_controller_types.hpp  requests_queue.hpp
testing_rest_client/tests/: conftest.py  rest_api_test.py
tests/: CMakeLists.txt
tests/commands_parser_test/: commands_parser_fixture.hpp  commands_parser_tests.cpp
tests/iio_parser_tests/: iio_parser_fixture.hpp  iio_parser_test.cpp
tests/presets_holder_tests/: presets_fixture.hpp  presets_test_suite.cpp
tests/reflow_controller_tests/: reflow_controller_test.cpp  reflow_controller_test.hpp
tests/testing_common/: fake_executor.hpp  modbus_proxy_mock.hpp  preset_items_matcher.hpp
utils/: CMakeLists.txt
utils/inc/common/: executable_running_location.hpp  meta_utils.hpp  overloaded.hpp
